adicionado estilização para telas menores que 550px para deixar layout responsivo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,3 +65,13 @@ h1 {
 .tecla:active:focus {
   box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
 }
+
+@media screen and (max-width: 550px){
+  .tecla {
+    border-radius: 15px;
+    font-size: 1rem;
+    height: 4rem;
+    line-height: 4rem;
+    width: 4rem;
+  }
+}
